--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: justwatch_unofficial
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/RaannaKasturi/justwatch_unofficial
 
 environment:
   sdk: ^3.7.2
