Update package description to reflect API purpose

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: justwatch_unofficial
-description: A starting point for Dart libraries or applications.
+description: Unofficial JustWatch API for Dart and Flutter.
 version: 1.0.0
 repository: https://github.com/RaannaKasturi/justwatch_unofficial
 
